# smtlib-rs

./: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
oldstuff/: Cargo.toml
oldstuff/src/: cmds.rs  datatypes.rs  functions.rs  lib.rs  sexprs.rs  sorts.rs  write.rs
oldstuff/src/cmds/: assert.rs  declare_const.rs  declare_datatype.rs  define_fun.rs
oldstuff/src/exprs/: bool.rs  int.rs  mod.rs
oldstuff/src/sexprs/: builder.rs  fmt.rs  io.rs
syntax/: Cargo.toml  README.md
syntax/src/: identifiers.rs  lexicon.rs  lib.rs  scripts.rs  sexprs.rs  sorts.rs  terms.rs
testfoo/: Cargo.toml
testfoo/src/: lib.rs
