[package]
name = "smtlib-syntax"
version = "0.1.0"
edition = "2021"
authors =  [ "Jan Winkelmann (keks)" ]
readme = "README.md"
description = "Types mirroring most of the syntactic elements from the SMT-LIB 2.6 spec. Meant for code generation, not parsing."
repository = "https://github.com/keks/smtlib-rs"
keywords = [ "smtlib", "smt" ]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
